Update works with full Xiaohongshu style content

--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
         ];
         const defaultWorks = [
             { id: 101, title: '人形机器人产业分析', platform: '公众号', status: '已发布', createdAt: '2026/2/20 09:00:00', content: '从产业链、成本下降和场景落地三方面拆解人形机器人商业化路径，重点分析核心零部件国产替代与2026年量产节点。' },
-            { id: 102, title: '春晚机器人幕后观察', platform: '小红书', status: '进行中', createdAt: '2026/2/20 13:30:00', content: '记录春晚机器人节目背后的动作编排、控制系统和舞台调度细节，并补充观众情绪反馈与传播数据。' },
+            { id: 102, title: '春晚机器人幕后观察', platform: '小红书', status: '进行中', createdAt: '2026/2/20 13:30:00', content: '🧨 2026春晚，宇树机器人又又又又上春晚了！\n\n这次不一样——机器人表演功夫、空翻、体操，动作流畅到让人惊呼...\n\n记录春晚机器人节目背后的动作编排、控制系统和舞台调度细节。' },
             { id: 103, title: 'Atlas 空翻拆解短文', platform: '即刻', status: '草稿', createdAt: '2026/2/21 08:15:00', content: '从感知、控制、执行三层解释Atlas完成空翻动作的关键技术，附上公开演示视频的动作切帧观察。' },
-            { id: 104, title: '中国人形机器人杀疯了！从跌倒到空翻只用一年', platform: '小红书', status: '草稿', createdAt: '2026/2/21 20:40:00', content: '以时间线复盘国产人形机器人能力跃迁：从稳定行走到复杂动作，重点讲训练数据、关节驱动和控制策略迭代。' },
-            { id: 105, title: '土耳其武器机器狗SARBOT', platform: '小红书', status: '草稿', createdAt: '2026/2/20 10:00:00', content: '介绍SARBOT的机动能力、任务定位与潜在军事应用，同时梳理全球武装机器人平台的近期发展趋势。' },
-            { id: 106, title: '机器人劳务上链！konnex_world获1500万融资', platform: '公众号', status: '草稿', createdAt: '2026/2/20 14:00:00', content: '解读“机器人劳务上链”概念，分析融资背景、商业模式与行业可行性，讨论数据可信和结算机制设计。' },
-            { id: 107, title: '前谷歌CEO斯坦福访谈泄露：AI将取代低技能工作', platform: '小红书', status: '草稿', createdAt: '2026/2/20 16:00:00', content: '提炼访谈核心观点，并补充“岗位替代 vs 岗位重构”的现实案例，给出个人学习和转型建议。' },
-            { id: 108, title: 'Sam Altman：世界还没准备好，AI起飞比预想的快', platform: '小红书', status: '草稿', createdAt: '2026/2/21 21:05:00', content: '围绕“AI发展速度超预期”展开，讨论社会系统适配、监管节奏和组织升级策略。' },
-            { id: 109, title: 'NVIDIA开源DreamDojo：机器人世界模型新时代', platform: '小红书', status: '草稿', createdAt: '2026/2/21 21:06:00', content: '介绍DreamDojo的定位和价值，解释世界模型对机器人泛化能力的提升路径与应用前景。' }
+            { id: 104, title: '中国人形机器人杀疯了！从跌倒到空翻只用一年', platform: '小红书', status: '草稿', createdAt: '2026/2/21 20:40:00', content: '🧨 中国人形机器人杀疯了！从跌倒到空翻只用一年\n\n—\n\n2026春晚，宇树机器人又又又又上春晚了！但这次不一样——机器人表演功夫、空翻、体操，动作流畅到让人惊呼...\n\n📊 数据：中国占85%以上市场份额\n💰 价格：宇树G1 $13,500 vs 特斯拉Optimus $20,000+\n\n2026目标：1-2万台\n\n#机器人 #宇树 #春晚 #AI' },
+            { id: 105, title: '土耳其武器机器狗SARBOT', platform: '小红书', status: '草稿', createdAt: '2026/2/20 10:00:00', content: '🔥 土耳其武器机器狗SARBOT曝光：军事机器人新趋势\n\n—\n\n土耳其国防公司发布了SARBOT，这是首款集成武器系统和LiDAR瞄准的武装四足机器人。\n\n💡 这是机器人在军事领域应用的重要里程碑。之前我们看到的机器狗主要是民用，现在武装版本也出现了。\n\n#机器人 #军事科技 #土耳其 #SARBOT' },
+            { id: 106, title: '机器人劳务上链！konnex_world获1500万融资', platform: '公众号', status: '草稿', createdAt: '2026/2/20 14:00:00', content: '🤖 机器人劳务上链！下一个万亿级赛道？\n\n—\n\nkonnex_world宣布完成1500万美元融资。它想把机器人的劳务"出租"到区块链上。\n\n🎬 想象：你拥有一台机器人，通过智能合约自动接单，完成后自动收款。\n\n优势：解决机器人"过剩产能"、降低用人成本、自动化结算\n挑战：技术成熟度、监管政策、规模化落地\n\n#机器人 #区块链 #Web3' },
+            { id: 107, title: '前谷歌CEO斯坦福访谈泄露：AI将取代低技能工作', platform: '小红书', status: '草稿', createdAt: '2026/2/20 16:00:00', content: '🔥 前谷歌CEO斯坦福访谈泄露：AI有多恐怖？\n\n—\n\n斯坦福大学一场AI访谈，因为"争议太大"被撤下，泄露版出来了。\n\n主讲人：前谷歌CEO Eric Schmidt\n\n📌 核心观点：\n1️⃣ AI可以从文本直接行动\n2️⃣ AI像"青少年"，需要边界管理\n3️⃣ 低技能工作将被AI取代，建议学习AI技能\n\n💬 与其焦虑，不如早点学AI\n\n#AI #斯坦福 #EricSchmidt' },
+            { id: 108, title: 'Sam Altman：世界还没准备好，AI起飞比预想的快', platform: '小红书', status: '草稿', createdAt: '2026/2/21 21:05:00', content: '🔥 Sam Altman：世界还没准备好，AI起飞比预想的快\n\n—\n\n"世界还没准备好。我们即将拥有极其强大的模型。AI起飞速度会比我想的更快。"\n\n💡 关键点：\n1️⃣ 模型能力将"极其强大"\n2️⃣ 变化速度超预期\n3️⃣ Altman承认"压力和焦虑"\n\n这波AI发展，要么上车，要么被甩下。\n\n#AI #SamAltman #OpenAI' },
+            { id: 109, title: 'NVIDIA开源DreamDojo：机器人世界模型新时代', platform: '小红书', status: '草稿', createdAt: '2026/2/21 21:06:00', content: '🤖 NVIDIA开源DreamDojo：机器人"世界模型"新时代\n\n—\n\nNVIDIA开源DreamDojo——基于44,000+小时人类第一人称视频训练的世界模型。\n\n🎯 核心亮点：\n• 规模：最大机器人世界模型预训练数据集\n• 训练数据：真实人类日常生活的第一视角\n• 技术：用连续潜在动作作为代理信号学习\n\n💡 意义：机器人不再只是"执行命令"，而是理解"物理世界"。\n\n#NVIDIA #机器人 #AI #DreamDojo' }
         ];
         let tasks = [];
         let works = [];
@@ -443,7 +443,7 @@
             const triggerType = document.getElementById('triggerType').value;
             const schedule = document.getElementById('schedule').value;
             const output = document.getElementById('outputTarget').value;
-            
+
             const tools = Array.from(document.querySelectorAll('input[name="tools"]:checked')).map(cb => cb.value);
 
             const newTask = {
